test.txt
Run ./gradle-4.10.1/bin/gradle sonarqube \
Starting a Gradle Daemon, 1 incompatible Daemon could not be reused, use --status for details

> Configure project :
org.gradle.api.plugins.HelpTasksPlugin@1b68eb6c
org.gradle.language.base.plugins.LifecycleBasePlugin@65dc1f4
org.gradle.api.plugins.BasePlugin@83c31bb
org.gradle.api.plugins.ReportingBasePlugin@22e3a557
org.gradle.api.plugins.JavaBasePlugin@6ef9fb79
org.gradle.api.plugins.JavaPlugin@643d533
org.gradle.api.plugins.WarPlugin@6f9b8da9
org.gradle.platform.base.plugins.ComponentBasePlugin@50ed5410
org.gradle.language.base.plugins.LanguageBasePlugin@71ee5f47
org.gradle.platform.base.plugins.BinaryBasePlugin@691ce604
org.gradle.api.plugins.JavaBasePluginRules@5a59c84b
org.gradle.api.publish.plugins.PublishingPlugin@60ae5ac4
org.gradle.api.publish.maven.plugins.MavenPublishPlugin@633935f1
vr.plugin.ManifestClasspathPlugin@6d1bd354
org.sonarqube.gradle.SonarQubePlugin@7994552c
classpath:: file collection
archiveName:: smedigitalbank-1111.war

> Task :generateDAL NO-SOURCE
> Task :generateER NO-SOURCE
> Task :generateOpenAPI NO-SOURCE
> Task :generateService NO-SOURCE
> Task :generateTAO NO-SOURCE
> Task :generateVO NO-SOURCE
warning: Supported source version 'RELEASE_8' from annotation processor 'org.gradle.api.internal.tasks.compile.processing.NonIncrementalProcessor' less than -source '11'

> Task :compileJava
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:9: error: package javax.xml.soap does not exist
import javax.xml.soap.MessageFactory;

                     ^
> Task :compileJava FAILED
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:10: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnection;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:11: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:12: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPMessage;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:13: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPPart;
                     ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/hif/channel/middleware/CustomRAKSOAPWebServiceClient.java:34: error: cannot find symbol
	private static MessageFactory soapMsgFactory;
	               ^
  symbol:   class MessageFactory
  location: class CustomRAKSOAPWebServiceClient
6 errors
1 warning


Deprecated Gradle features were used in this build, making it incompatible with Gradle 5.0.
FAILURE: Build failed with an exception.

Use '--warning-mode all' to show the individual deprecation warnings.
* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 33s
See https://docs.gradle.org/4.10.1/userguide/command_line_interface.html#sec:command_line_warnings
1 actionable task: 1 executed
Error: Process completed with exit code 1.
